--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # file
-.ipynb_checkpoints/*.csv
-.ipynb_checkpoints/*.txt
+
 
 # directory
 backup/
 tbl_cache/
-.ipynb_checkpoints/
+build/
+dist/
+
 
 
