--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ jedi==0.18.1
 jupyter_client==7.4.3
 jupyter_core==4.11.2
 kiwisolver==1.4.4
+lxml==4.9.1
 macholib==1.16.2
 matplotlib==3.6.0
 matplotlib-inline==0.1.6
@@ -36,6 +37,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
+platformdirs==2.5.4
 prompt-toolkit==3.0.31
 psutil==5.9.3
 ptyprocess==0.7.0
